@@ -331,7 +331,7 @@ public class ExpressionTestCase {
         assertEquals(a.getInteger(), 7);
         assertEquals(a.getFloat(), 7.3, delta);
         assertEquals(a.getString(), "7.3");
-        assertEquals(a.getNumber(), new Double(7.3));
+        assertEquals(a.getNumber(), Double.valueOf(7.3));
         byte[] raw = a.getRaw();
         assertEquals(raw.length, 8);
         assertResultNode(a);
@@ -343,7 +343,7 @@ public class ExpressionTestCase {
         assertEquals(b.getInteger(), 8);
         assertEquals(b.getFloat(), 7.5, delta);
         assertEquals(b.getString(), "7.5");
-        assertEquals(b.getNumber(), new Double(7.5));
+        assertEquals(b.getNumber(), Double.valueOf(7.5));
     }
 
     @Test
@@ -394,7 +394,7 @@ public class ExpressionTestCase {
         assertEquals(a.getInteger(), 7);
         assertEquals(a.getFloat(), 7.0, delta);
         assertEquals(a.getString(), "7");
-        assertEquals(a.getNumber(), new Long(7));
+        assertEquals(a.getNumber(), Long.valueOf(7));
         byte[] raw = a.getRaw();
         assertEquals(raw.length, 8);
         assertResultNode(a);
